syntax = "proto3";
package protos;

import "webhook.proto";
import "pipelineproxy.proto";

//this is a direct translation of the ocelot.yaml file
message BuildConfig {
    string image = 1;
    repeated string dockerPackages = 2;
    Stage before= 3;
    Stage after = 4;
    Stage build = 5;
    Stage test = 6;
    Stage deploy = 7;
}

message Stage {
    repeated string env = 1;
    repeated string script = 2;
}

message WerkerTask {
    resources.Pipeline pipe = 1;
    string vaultToken = 2;
    string checkoutHash = 3;
}


//don't think we'll need PushBuildBundle/PRBuildBundle, but keep right now //

message PushBuildBundle {
    BuildConfig config = 1;
    RepoPush pushData = 2;
    string vaultToken = 3;
    string checkoutHash = 4;
}

message PRBuildBundle {
    BuildConfig config = 1;
    PullRequest prData = 2;
    string vaultToken = 3;
    string checkoutHash = 4;
}